--- a/pages/forms/basic_elements.html
+++ b/pages/forms/basic_elements.html
@@ -384,8 +384,8 @@
             </a>
             <div class="collapse" id="error">
               <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="../../pages/samples/error-404.html"> 404 </a></li>
-                <li class="nav-item"> <a class="nav-link" href="../../pages/samples/error-500.html"> 500 </a></li>
+                <li class="nav-item"> <a class="nav-link" href="../404.php"> 404 </a></li>
+                <li class="nav-item"> <a class="nav-link" href="../500.php"> 500 </a></li>
               </ul>
             </div>
           </li>
